 * Fix: Prevent `USE_THOUSAND_SEPARATOR = True` from breaking the image focal point chooser (Sævar Öfjörð Magnússon)
 * Fix: Removed deprecated `SessionAuthenticationMiddleware` from project template (Samir Shah)
 * Fix: Custom display page titles defined with `get_admin_display_title` are now shown in search results (Ben Sturmfels, Matt Westcott)


1.12.2 (18.09.2017)
~~~~~~~~~~~~~~~~~~~

 * Fix: Migration for addition of `Page.draft_title` field is now reversible (Venelin Stoykov)
 * Fix: Fixed failure on application startup when `ManifestStaticFilesStorage` is in use and `collectstatic` has not yet been run (Matt Westcott)
 * Fix: Fixed handling of Vimeo and other oEmbed providers with a format parameter in the endpoint URL (Mitchel Cabuloy)
 * Fix: Fixed regression in rendering save button in wagtail.contrib.settings edit view (Matt Westcott)


1.12.1 (30.08.2017)
~~~~~~~~~~~~~~~~~~~

 * Fix: Prevent home page draft title from displaying as blank (Mikalai Radchuk, Matt Westcott)
 * Fix: Fix regression on styling of preview button with more than one preview mode (Jack Paine)
 * Fix: Enabled translations within date-time chooser widget (Lucas Moeskops)


1.12 LTS (21.08.2017)
~~~~~~~~~~~~~~~~~~~~~

 * Ability to configure the feature set of rich text fields on a per-field basis (Matt Westcott)
 * New class-based configuration for media embeds (Karl Hobley)
 * The admin interface now displays a title of the latest draft (Mikalai Radchuk)
 * `RoutablePageMixin` now has a default "index" route (Andreas Nüßlein, Matt Westcott)
 * Added multi-select form field to the form builder (dwasyl)
 * Improved performance of sitemap generation (Levi Adler)
 * StreamField now respects the `blank` setting; StreamBlock accepts a `required` setting (Loic Teixeira)
 * StreamBlock now accepts `min_num`, `max_num` and `block_counts` settings to control the minimum and maximum numbers of blocks (Edwar Baron, Matt Westcott)